[gd_scene load_steps=5 format=3 uid="uid://boxdxeyolykw3"]

[ext_resource type="Script" path="res://src/sacrificeToken.gd" id="1_mnlhc"]
[ext_resource type="Texture2D" uid="uid://cgoff8aocns4b" path="res://assets/board/sacrifice_button.png" id="2_b7s1w"]
[ext_resource type="Texture2D" uid="uid://dj5171ukad3er" path="res://assets/board/TokenShadow.png" id="2_lqj0g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fj61a"]
radius = 70.0

[node name="SacrificeToken" type="Node2D"]
script = ExtResource("1_mnlhc")

[node name="Token" type="Sprite2D" parent="."]
texture = ExtResource("2_lqj0g")

[node name="SacrificeIcon" type="Sprite2D" parent="."]
texture = ExtResource("2_b7s1w")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_fj61a")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
